--- a/src/assets/scss/base/_buttons.scss
+++ b/src/assets/scss/base/_buttons.scss
@@ -2,3 +2,17 @@
   background-color: #fff;
   border: 1px solid $border-color;
 }
+
+.loading-btn {
+  position: relative;
+  .btn-loading-text {
+    opacity: 0;
+  }
+
+  .loading-spinner {
+    position: absolute;
+    left: 0;
+    right: 0;
+    text-align: center;
+  }
+}
