Refactor to use vuex

--- a/src/assets/scss/_utilities.scss
+++ b/src/assets/scss/_utilities.scss
@@ -134,6 +134,11 @@
   top: 4px;
 }
 
+.pull-down-5 {
+  position: relative;
+  top: 5px;
+}
+
 .pull-left-1 {
   position: relative;
   right: 1px;
