--- a/src/assets/scss/base/_modals.scss
+++ b/src/assets/scss/base/_modals.scss
@@ -11,6 +11,7 @@
 .modal-footer {
   justify-content: center;
   background-color: $light;
+  padding: 0.5rem;
   .btn-secondary {
     background-color: transparent;
     border: none;
