--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -118,6 +118,7 @@ $label-margin-bottom: 0.4rem;
 
 $modal-inner-padding: 1rem 3rem;
 $modal-header-padding-x: 3rem;
+$modal-content-border-radius: 1rem;
 
 // Close
 
