--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -10,6 +10,7 @@
 @import 'base/buttons';
 @import 'base/dropdown';
 @import 'base/modals';
+@import 'base/spinner';
 @import 'base/toasts';
 @import 'base/type';
 
