--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -2,6 +2,7 @@
 $dark: #162a41;
 // $ligh#f1f4f84f8;
 $light: #f4f6f8;
+$primary: #2e83f6;
 
 $body-color: $dark;
 
@@ -112,7 +113,7 @@ $h6-font-size: $text-lg;
 
 // Forms
 
-$label-margin-bottom: 0.4rem;
+$label-margin-bottom: 0.3rem;
 
 // Modals
 
