--- a/src/assets/scss/base/_buttons.scss
+++ b/src/assets/scss/base/_buttons.scss
@@ -16,3 +16,11 @@
     text-align: center;
   }
 }
+
+.btn-icon {
+  background-color: transparent;
+  border-color: transparent;
+  color: $body-color;
+  box-shadow: none;
+  padding: 0.375rem 0.75rem;
+}
