--- a/src/assets/scss/_utilities.scss
+++ b/src/assets/scss/_utilities.scss
@@ -18,6 +18,12 @@
   margin-right: auto;
 }
 
+.container-xl {
+  max-width: 1400px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 // Font sizes
 
 .text-xxs {
